# ttp-processor-demo

./: .gitignore  API_GAPS_HANDOFF.md  ARCHIVE_PLUS_PLAN.md  CALL_GRAPH_FEATURE.md  CLAUDE.md  CURSOR_BOUNDARY_ISSUE.md  DEPLOYMENT_QUICKSTART.md  FLOWCTL_PIPELINES.md  PROTOCOL_23_COMPLETION_SUMMARY.md  PROTOCOL_23_MIGRATION_QUICKSTART.md  PROTOCOL_23_UPDATE_FINAL_STATUS.md  PROTOCOL_23_UPDATE_STATUS.md  PR_REVIEW_FIXES.md  README-jsonrpc-client.md  README.md  README_DEPLOYMENT.md  ROLLBACK_STRATEGY_ANALYSIS.md  SILVER_LAYER_MAPPING.md  STELLAR_DATALAKE_ANALYSIS.md  TEST_CONTRACT_INVOCATIONS.sql  WHY_STELLAR_PROCESSORS.md  add_primary_keys.sql  add_unique_constraints.sql  add_unique_constraints_corrected.sql  contract-events-flowctl-pipeline-live.yaml  contract-events-flowctl-pipeline.template.yaml  contract-invocation-processor-implementation-plan.md  convert_v3_to_postgres_and_bronze.py  create_indexes.sql  example-usage.js  flake.nix  github-discussion-1765-analysis.md  go.work  go.work.sum  implement_all_19_tables.md  install-sdk.sh  ledger-jsonrpc-client.js  log4j2.xml  setup-contract-events-pipeline.sh  test_account_filtering.md  (+2 more)
account-balance-processor/: Makefile  README.md
ai_docs/: account-id-filtering-implementation.md  week1-mvp-plan.md  (+11 more)
consumer_app/rust_wasm/: .gitignore  Cargo.toml  DEPENDENCIES.md  README.md  build.rs
consumer_app/rust_wasm/proto/ingest/asset/: asset.proto
consumer_app/rust_wasm/proto/ingest/processors/token_transfer/: token_transfer_event.proto
consumer_app/rust_wasm/src/: lib.rs
consumer_app/rust_wasm/web-example/: index.html
(+1355 files in other folders)
