[package]
name = "ttp_consumer_wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly version of TTP event consumer"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
js-sys = "0.3.61"
web-sys = { version = "0.3.61", features = [
    "console",
] }
prost = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tonic-web-wasm-client = "0.3.0"
console_error_panic_hook = "0.1.7"

[build-dependencies]
tonic-build = "0.9"

[profile.release]
opt-level = "s"
lto = true 